Add @content directive to button-text-icon mixin

--- a/app/assets/stylesheets/exo/_mixins.sass
+++ b/app/assets/stylesheets/exo/_mixins.sass
@@ -66,6 +66,8 @@
     vertical-align: middle
     background: no-repeat center center
     +image-background($path)
+    &
+      @content
 
 @mixin set-tap-highlight()
   -webkit-tap-highlight-color: rgba(90,90,90, 0.5)
